# my_programs

./: .gitignore  CMakeLists.txt  README.md
cpp/PT_ labs/lab1/: lab.cpp
cpp/PT_ labs/lab2/: lab.cpp
cpp/fl_programs/: task1  task2  task2.cpp  task3  task3.cpp  task4  task4.cpp  task5
cpp/lab1/: lab  lab.cpp
cpp/lab2/: lab  lab.cpp
cpp/pt_labs/lab2/: README.md  cooler_lab  cooler_lab2.cpp  lab2.cpp
cpp/pt_labs/lab3/: CMakeLists.txt  main  main.cpp  matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
cpp/pt_labs/lab4/: figures.h
cpp/study labs/: task1.cpp  task5.cpp
cpp/study labs/lab1/: README.md  lab1.cpp
cpp/study labs/lab2/: cooler_lab2.cpp  lab2.cpp
cpp/study labs/lab3/: README.md  main.cpp  matrix.cpp  matrix.hpp  vector.hpp
cpp/study labs/lab4/: README.md  figures.cpp  figures.h  main.cpp
python/SuperGrader/: main.py  requirements.txt
python/data analysis labs/: Lab1.ipynb  Lab3.ipynb  Lab4.ipynb  Lab5.ipynb  Lab6.ipynb  final_project.ipynb
python/teachers parser/: requirements.txt  teachers.csv  teachers_parse.py
python/tg calculator/: main.py
